--- a/src/index.html
+++ b/src/index.html
@@ -6,34 +6,13 @@
 })
 
 <body>
-  <!-- Header -->
-  @@include('./htmlParts/_header.html',{})
-
-  <!-- main content -->
-  <main>
-    <img width="150px" src="@img/Pug.webp" alt="pug1">
-    <h1>Home page</h1>
-    <ul class="grid-box">
-      <li class="grid-box__item">
-        @@include('./htmlParts/components/Card-with-image/card-with-image.html', {})
-      </li>
-      <li class="grid-box__item">
-        @@include('./htmlParts/components/Card-with-image/card-with-image.html', {})
-      </li>
-      <li class="grid-box__item">
-        @@include('./htmlParts/components/Card-with-image/card-with-image.html', {})
-      </li>
-      <li class="grid-box__item">
-        @@include('./htmlParts/components/Card-with-image/card-with-image.html', {})
-      </li>
-    </ul>
-  </main>
-
-  <!-- Footer -->
-  @@include('htmlParts/_footer.html')
-
-  <!-- Modal -->
-  <!-- @@include('htmlParts/_modal.html') -->
+  <div class="grid-template grid-template_main">
+    @@include('./htmlParts/_header.html',{})
+    <div class="grid-template grid-template_content container">
+      @@include('./htmlParts/_aside-bar.html',{})
+      @@include('./htmlParts/_main.html',{})
+    </div>
+  </div>
   <script src="js/app.min.js"></script>
 </body>
 
