--- a/src/htmlParts/_aside-bar.html
+++ b/src/htmlParts/_aside-bar.html
@@ -1,3 +1,35 @@
-<aside class="control-bar aside box-init">
-  aside
+<aside class="control-bar">
+  @@include('./_title_aside.html', {})
+  <button class="control-bar__button"></button>
+  <div class="control-bar__trailers">
+    @@include('./_card_sidebar.html', {
+    "name": "Batman 2022",
+    "date": "Dec 2022",
+    })
+    @@include('./_card_sidebar.html', {
+    "name": "Batman 2022",
+    "date": "Dec 2022",
+    })
+  </div>
+  <div class="control-bar__favorites favourites">
+    <h2 class="favourites__heading">Favourite genres</h2>
+    <ul class="favourites__list favourites__list_added">
+      <li class="favourites__item">Action</li>
+      <li class="favourites__item">Western</li>
+      <li class="favourites__item">Adventures</li>
+      <li class="favourites__item">Drama</li>
+      <li class="favourites__item">Comedy</li>
+    </ul>
+    <div class="favourites__control-bar">
+      <button class="favourites__button-add">
+        <span>+</span>
+        Add your favourite genres
+      </button>
+    </div>
+    <ul class="favourites__list favourites__list_recommended">
+      <li class="favourites__item">Drama</li>
+      <li class="favourites__item">Comedy</li>
+      <li class="favourites__item">Comedy</li>
+    </ul>
+  </div>
 </aside>
