feat: set bkgr through borders via bseudo and box-shadow

--- a/src/htmlParts/_aside-bar.html
+++ b/src/htmlParts/_aside-bar.html
@@ -20,12 +20,10 @@
       <li class="favourites__item">Drama</li>
       <li class="favourites__item">Comedy</li>
     </ul>
-    <div class="favourites__control-bar">
-      <button class="favourites__button-add">
-        <span>+</span>
-        Add your favourite genres
-      </button>
-    </div>
+    <h3 class="favourites__subheading">
+      <span>+</span>
+      Add your favourite genres
+    </h3>
     <ul class="favourites__list favourites__list_recommended">
       <li class="favourites__item">Drama</li>
       <li class="favourites__item">Comedy</li>
