--- a/src/htmlParts/_title_trending.html
+++ b/src/htmlParts/_title_trending.html
@@ -3,7 +3,7 @@
     <h2 class="title__main">Popular movies 2021</h2>
   </div>
   <div class="title__right">
-    <span>All movies</span>
+    <span class="title__operation-name">All movies</span>
     <img src="../img/arrow1.svg" alt="arrow">
   </div>
 </div>
