fix: card width

--- a/src/htmlParts/_aside-bar.html
+++ b/src/htmlParts/_aside-bar.html
@@ -1,6 +1,6 @@
 <aside class="control-bar">
   @@include('./_title_aside.html', {})
-  <button class="control-bar__button"></button>
+  <button class="control-bar__button hover"></button>
   <div class="control-bar__trailers">
     @@include('./_card_sidebar.html', {
     "name": "Batman 2022",
@@ -14,20 +14,20 @@
   <div class="control-bar__favorites favourites">
     <h2 class="favourites__heading">Favourite genres</h2>
     <ul class="favourites__list favourites__list_added">
-      <li class="favourites__item">Action</li>
-      <li class="favourites__item">Western</li>
-      <li class="favourites__item">Adventures</li>
-      <li class="favourites__item">Drama</li>
-      <li class="favourites__item">Comedy</li>
+      <li class="favourites__item hover">Action</li>
+      <li class="favourites__item hover">Western</li>
+      <li class="favourites__item hover">Adventures</li>
+      <li class="favourites__item hover">Drama</li>
+      <li class="favourites__item hover">Comedy</li>
     </ul>
     <h3 class="favourites__subheading">
       <span>+</span>
       Add your favourite genres
     </h3>
     <ul class="favourites__list favourites__list_recommended">
-      <li class="favourites__item">Drama</li>
-      <li class="favourites__item">Comedy</li>
-      <li class="favourites__item">Comedy</li>
+      <li class="favourites__item hover">Drama</li>
+      <li class="favourites__item hover">Comedy</li>
+      <li class="favourites__item hover">Comedy</li>
     </ul>
   </div>
 </aside>
