--- a/src/htmlParts/_title_aside.html
+++ b/src/htmlParts/_title_aside.html
@@ -8,8 +8,8 @@
     <div class="title__operation">
       <span class="title__operation-value">Today</span>
       <div class="title__buttons-wrapper">
-        <button class="title__button-next"></button>
-        <button class="title__button-prev"></button>
+        <button class="title__button-next hover"></button>
+        <button class="title__button-prev hover"></button>
       </div>
     </div>
   </div>
