--- a/src/htmlParts/_title_continue.html
+++ b/src/htmlParts/_title_continue.html
@@ -3,7 +3,7 @@
     <h2 class="title__main">Continue Watching</h2>
     <p class="title__count">4 Movies</p>
   </div>
-  <div class="title__right">
+  <div class="title__right hover">
     <span class="title__operation-name">All movies</span>
     <img src="../img/arrow1.svg" alt="arrow">
   </div>
