--- a/src/htmlParts/_title_trending.html
+++ b/src/htmlParts/_title_trending.html
@@ -2,7 +2,7 @@
   <div class="title__left">
     <h2 class="title__main">Popular movies 2021</h2>
   </div>
-  <div class="title__right">
+  <div class="title__right hover">
     <span class="title__operation-name">All movies</span>
     <img src="../img/arrow1.svg" alt="arrow">
   </div>
