--- a/src/htmlParts/_card_continue.html
+++ b/src/htmlParts/_card_continue.html
@@ -2,7 +2,7 @@
   <p class="card__views card__views_default card__views_accent">#1 Trending 🔥</p>
   <div class="card__control-bar card__control-bar_m">
     <div class="card__info card__info_default">
-      <button class="card__play card__play_m" type="button"></button>
+      <button class="card__play card__play_m hover" type="button"></button>
       <div class="card__content">
         <h3 class="card__name card__name_m">Spider-Man: No Way Home</h3>
         <p class="card__date card__date_m">Feb 2021</p>
