--- a/src/htmlParts/_card_trending.html
+++ b/src/htmlParts/_card_trending.html
@@ -1,7 +1,7 @@
 <div class="card card_accent card_s">
   <div class="card__control-bar card__control-bar_s">
     <div class="card__info card__info_default">
-      <button class="card__play card__play_s" type="button"></button>
+      <button class="card__play card__play_s hover" type="button"></button>
       <div class="card__content">
         <h3 class="card__name card__name_s">Spider-Man: No Way Home</h3>
         <p class="card__date card__date_s">Feb 2021</p>
