fix: bug with background of card

--- a/src/htmlParts/_title_continue.html
+++ b/src/htmlParts/_title_continue.html
@@ -5,6 +5,6 @@
   </div>
   <div class="title__right hover">
     <span class="title__operation-name">All movies</span>
-    <img src="../img/arrow1.svg" alt="arrow">
+    <img src="@img/arrow1.svg" alt="arrow">
   </div>
 </div>
