fix: flexible cards width and gaps between cards

--- a/src/htmlParts/_main.html
+++ b/src/htmlParts/_main.html
@@ -10,6 +10,7 @@
       <div class="main-display__card-wrapper main-display__card-wrapper_continuing">
         @@include('../htmlParts/_card_continue.html')
         @@include('../htmlParts/_card_continue.html')
+        @@include('../htmlParts/_card_continue.html')
       </div>
     </div>
     <div class="main-display__section">
