feat: save proportion of cards size

--- a/src/htmlParts/_card_bilboard.html
+++ b/src/htmlParts/_card_bilboard.html
@@ -1,11 +1,13 @@
 <div class="card card_l">
-  <p class="card__views card__views_default">Views 77k</p>
-  <div class="card__control-bar card__control-bar_l">
-    <div class="card__info card__info_default">
-      <button class="card__play card__play_l hover" type="button"></button>
-      <div class="card__content">
-        <h3 class="card__name card__name_l">Spider-Man: No Way Home</h3>
-        <p class="card__date card__date_l">Feb 2021</p>
+  <div class="card__content-wrapper card__content-wrapper_l">
+    <p class="card__views card__views_default">Views 77k</p>
+    <div class="card__control-bar card__control-bar_l">
+      <div class="card__info card__info_default">
+        <button class="card__play card__play_l hover" type="button"></button>
+        <div class="card__content">
+          <h3 class="card__name card__name_l">Spider-Man: No Way Home</h3>
+          <p class="card__date card__date_l">Feb 2021</p>
+        </div>
       </div>
     </div>
   </div>
