--- a/src/htmlParts/_card_continue.html
+++ b/src/htmlParts/_card_continue.html
@@ -1,15 +1,17 @@
 <div class="card card_accent card_m">
-  <p class="card__views card__views_default card__views_accent">#1 Trending 🔥</p>
-  <div class="card__control-bar card__control-bar_m">
-    <div class="card__info card__info_default">
-      <button class="card__play card__play_m hover" type="button"></button>
-      <div class="card__content">
-        <h3 class="card__name card__name_m">Spider-Man: No Way Home</h3>
-        <p class="card__date card__date_m">Feb 2021</p>
+  <div class="card__content-wrapper card__content-wrapper_m">
+    <p class="card__views card__views_default card__views_accent">#1 Trending 🔥</p>
+    <div class="card__control-bar card__control-bar_m">
+      <div class="card__info card__info_default">
+        <button class="card__play card__play_m hover" type="button"></button>
+        <div class="card__content">
+          <h3 class="card__name card__name_m">Spider-Man: No Way Home</h3>
+          <p class="card__date card__date_m">Feb 2021</p>
+        </div>
       </div>
-    </div>
-    <div class="card__tech card__tech_default">
-      <p class="card__timer">02:30:00</p>
+      <div class="card__tech card__tech_default">
+        <p class="card__timer">02:30:00</p>
+      </div>
     </div>
   </div>
 </div>
