--- a/src/htmlParts/_card_sidebar.html
+++ b/src/htmlParts/_card_sidebar.html
@@ -1,11 +1,13 @@
-<div class="card card_l card_l-sidebar">
-  <p class="card__views card__views_default">Views 77k</p>
-  <div class="card__control-bar card__control-bar_l">
-    <div class="card__info card__info_default">
-      <button class="card__play card__play_l hover" type="button"></button>
-      <div class="card__content">
-        <h3 class="card__name card__name_l">@@name</h3>
-        <p class="card__date card__date_l">@@date</p>
+<div class="card card_l-sidebar">
+  <div class="card__content-wrapper card__content-wrapper_l-sidebar">
+    <p class="card__views card__views_default">Views 77k</p>
+    <div class="card__control-bar card__control-bar_l">
+      <div class="card__info card__info_default">
+        <button class="card__play card__play_l hover" type="button"></button>
+        <div class="card__content">
+          <h3 class="card__name card__name_l">@@name</h3>
+          <p class="card__date card__date_l">@@date</p>
+        </div>
       </div>
     </div>
   </div>
