feat: add readme

--- a/src/htmlParts/_header.html
+++ b/src/htmlParts/_header.html
@@ -1,11 +1,9 @@
 <header class="header">
   <div class="container">
     <div class="content">
-      <div class="logo hover">
-        <a href="#" class="logo">
-          <img class="logo__img" src="@img/logo.svg" alt="logo">
-        </a>
-      </div>
+      <a href="#" class="logo hover">
+        <img class="logo__img" src="@img/logo.svg" alt="logo">
+      </a>
       <nav class="header__nav">
         <ul class="menu">
           <li class="menu__item hover">
@@ -37,14 +35,9 @@
         <p class="header__time time-bar__time">19:55</p>
         <p class="header__date time-bar__date">March 30</p>
       </div>
-      <div class="avatar hover">
-        <a href="#" class="avatar__link">
-          <img class="avatar__img" src="@img/avatar.png" alt="avatar">
-        </a>
-      </div>
-      <div class="burger">
-        <span></span>
-      </div>
+      <a href="#" class="avatar hover avatar__link">
+        <img class="avatar__img" src="@img/avatar.png" alt="avatar">
+      </a>
     </div>
   </div>
 </header>
